--- a/index.html
+++ b/index.html
@@ -65,6 +65,95 @@
 
   </header>
 
+  <main class="container">
+    <input type="radio" name="toggle" id="btn-1" checked>
+    <input type="radio" name="toggle" id="btn-2">
+    <input type="radio" name="toggle" id="btn-3">
+
+    <div class="slider">
+      <article class="slide slide-1">
+        <div class="slide__image">
+          <img src="img/slider-1.png" alt="Самая длинная палка для селфи" width="384" height="486">
+        </div>
+        <h2 class="slide__title">Делай селфи как Бен Стиллер!</h2>
+        <p class="slide__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+        <a href="#" class="btn">Подробнее</a>
+        <table class="stats">
+
+          <tbody>
+            <tr>
+              <td>8,5 м</td>
+              <td>5 кг</td>
+              <td>Карбон</td>
+            </tr>
+          </tbody>
+
+          <tfoot>
+            <td>Длина палки</td>
+            <td>Вес палки</td>
+            <td>Материал</td>
+          </tfoot>
+
+        </table>
+
+      </article>
+
+      <article class="slide slide-2">
+        <div class="slide__image">
+          <img src="img/slider-2.png" alt="Мотивирующие фитнес-браслеты" width="345" height="485">
+        </div>
+        <h2 class="slide__title">Худеем правильно!</h2>
+        <p class="slide__description">Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету.</p>
+        <a href="#" class="btn">Подробнее</a>
+        <table class="stats">
+
+          <tbody>
+            <tr>
+              <td>48 часов</td>
+            </tr>
+          </tbody>
+
+          <tfoot>
+            <td>Без подзарядки</td>
+          </tfoot>
+
+        </table>
+
+      </article>
+
+      <article class="slide slide-3">
+        <div class="slide__image">
+          <img src="img/slider-3.png" alt="Квадрокоптер" width="526" height="334">
+        </div>
+        <h2 class="slide__title">Порхает как бабочка, жалит как пчела!</h2>
+        <p class="slide__description">Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру.</p>
+        <a href="#" class="btn">Подробнее</a>
+        <table class="stats">
+
+          <tbody>
+            <tr>
+              <td>800 м</td>
+              <td>50 м</td>
+            </tr>
+          </tbody>
+
+          <tfoot>
+            <td>Дальность полета</td>
+            <td>Радиус поражения</td>
+          </tfoot>
+
+        </table>
+      </article>
+
+      <div class="slider-controls">
+        <label for="btn-1"></label>
+        <label for="btn-2"></label>
+        <label for="btn-3"></label>
+      </div>
+    </div>
+
+  </main>
+
   <footer class="main-footer">
     <div class="column-left">
 
