--- a/index.html
+++ b/index.html
@@ -145,11 +145,105 @@
         </table>
       </article>
 
-      <div class="slider-controls">
+      <div class="slider__controls">
         <label for="btn-1"></label>
         <label for="btn-2"></label>
         <label for="btn-3"></label>
       </div>
+    </div>
+
+    <section class="popular">
+      <ul class="popular__list">
+        <li class="popular__item">
+          <a href="#">Виртуальная реальность</a>
+        </li>
+        <li class="popular__item">
+          <a href="#">Моноподы для селфи</a>
+        </li>
+        <li class="popular__item">
+          <a href="#">Экшн-камеры</a>
+        </li>
+        <li class="popular__item">
+          <a href="#">Фитнес-браслеты</a>
+        </li>
+        <li class="popular__item">
+          <a href="#">Умные часы</a>
+        </li>
+        <li class="popular__item">
+          <a href="#">Квадрокоптеры</a>
+        </li>
+      </ul>
+    </section>
+
+    <input type="radio" name="services-toggle" id="services-btn-1" checked>
+    <input type="radio" name="services-toggle" id="services-btn-2">
+    <input type="radio" name="services-toggle" id="services-btn-3">
+    <section class="services slider">
+      <article class="slide slide-1">
+        <h2 class="services-slider__title">Доставка</h2>
+        <p class="services-slider__description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
+      </article>
+
+      <article class="slide slide-2">
+        <h2 class="services-slider__title">Гарантия</h2>
+        <p class="services-slider__description">Если из-за возгорания купленого у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
+      </article>
+
+      <article class="slide slide-3">
+        <h2 class="services-slider__title">Кредит</h2>
+        <p class="services-slider__description">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
+      </article>
+
+      <div class="services-slider__controls">
+        <label for="services-btn-1">Доставка</label>
+        <label for="services-btn-2">Гарантия</label>
+        <label for="services-btn-3">Кредит</label>
+      </div>
+
+    </section>
+
+    <section class="companies">
+      <ul class="companies__list">
+        <li class="companies__item">
+          <a href="#">DJI</a>
+        </li>
+        <li class="companies__item">
+          <a href="#">SP Gadgets</a>
+        </li>
+        <li class="companies__item">
+          <a href="#">GoPro</a>
+        </li>
+        <li class="companies__item">
+          <a href="#">Vive</a>
+        </li>
+      </ul>
+    </section>
+
+    <div class="index-columns">
+      <section class="about-us">
+        <h2 class="about-us__title">О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:</p>
+        <ul class="about-us__list">
+          <li class="about-us__item">
+            <a href="#">Деловые линии</a>
+          </li>
+          <li class="about-us__item">
+            <a href="#">Автотрейдинг</a>
+          </li>
+          <li class="about-us__item">
+            <a href="#">ЖелДорЭкспедиция</a>
+          </li>
+        </ul>
+        <a href="#" class="btn">Подробнее о нас</a>
+      </section>
+
+      <section class="contacts">
+        <h2 class="contacts__title">Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
+        <div class="map"></div>
+        <a href="#" class="btn">Напишите нам</a>
+      </section>
     </div>
 
   </main>
