--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
   </header>
 
-  <main class="container">
+  <main>
     <input type="radio" name="toggle" id="btn-1" class="visually-hidden" checked>
     <input type="radio" name="toggle" id="btn-2" class="visually-hidden">
     <input type="radio" name="toggle" id="btn-3" class="visually-hidden">
 
-    <div class="slider slider-features">
+    <div class="slider slider-features container">
       <article class="slide" id="features__slide-1">
           <h2 class="slide__title">Делай селфи, <br> как Бен Стиллер!</h2>
           <p class="slide__description">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -155,24 +155,24 @@
       </div>
     </div>
 
-    <section class="popular">
+    <section class="popular container">
       <ul class="popular__list">
-        <li class="popular__item">
+        <li class="popular__item virtual">
           <a href="#">Виртуальная реальность</a>
         </li>
-        <li class="popular__item">
+        <li class="popular__item selfie">
           <a href="#">Моноподы для селфи</a>
         </li>
-        <li class="popular__item">
+        <li class="popular__item action">
           <a href="#">Экшн-камеры</a>
         </li>
-        <li class="popular__item">
+        <li class="popular__item fitness">
           <a href="#">Фитнес-браслеты</a>
         </li>
-        <li class="popular__item">
+        <li class="popular__item smart">
           <a href="#">Умные часы</a>
         </li>
-        <li class="popular__item">
+        <li class="popular__item quadro">
           <a href="#">Квадрокоптеры</a>
         </li>
       </ul>
