--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           <a href="#">Виртуальная реальность</a>
         </li>
         <li class="popular__item selfie">
-          <a href="#">Моноподы для селфи</a>
+          <a href="#">Моноподы<br>для селфи</a>
         </li>
         <li class="popular__item action">
           <a href="#">Экшн-камеры</a>
@@ -178,32 +178,34 @@
       </ul>
     </section>
 
-    <input type="radio" name="services-toggle" id="services-btn-1" checked>
-    <input type="radio" name="services-toggle" id="services-btn-2">
-    <input type="radio" name="services-toggle" id="services-btn-3">
-    <section class="services slider">
-      <article class="slide slide-1">
-        <h2 class="services-slider__title">Доставка</h2>
-        <p class="services-slider__description">Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.</p>
-      </article>
+    <div class="services-slider__wrapper">
+      <input type="radio" name="services-toggle" id="services-btn-1" class="visually-hidden" checked>
+      <input type="radio" name="services-toggle" id="services-btn-2" class="visually-hidden">
+      <input type="radio" name="services-toggle" id="services-btn-3" class="visually-hidden">
+      <section class="slider services-slider">
+        <article class="slide" id="services__slide-1">
+          <h2 class="services-slider__title">Доставка</h2>
+          <p class="services-slider__description">Мы с удовольствием доставим ваш товар прямо к вашему<br>подъезду совершенно бесплатно! Ведь мы неплохо<br>заработаем, поднимая его на ваш этаж.</p>
+        </article>
 
-      <article class="slide slide-2">
-        <h2 class="services-slider__title">Гарантия</h2>
-        <p class="services-slider__description">Если из-за возгорания купленого у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.</p>
-      </article>
+        <article class="slide" id="services__slide-2">
+          <h2 class="services-slider__title">Гарантия</h2>
+          <p class="services-slider__description">Если из-за возгорания купленого у нас товара у вас сгорит<br>дом - не переживайте, мы выдадим вам новый.<br>Товар, не дом, конечно же.</p>
+        </article>
 
-      <article class="slide slide-3">
-        <h2 class="services-slider__title">Кредит</h2>
-        <p class="services-slider__description">Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
-      </article>
+        <article class="slide" id="services__slide-3">
+          <h2 class="services-slider__title">Кредит</h2>
+          <p class="services-slider__description">Залезть в долговую яму стало проще! Кредитные<br>консультанты подберут для вас наиболее выгодные<br>условия кредита. Выгодные для нашего банка, разумеется.</p>
+        </article>
 
-      <div class="services-slider__controls">
-        <label for="services-btn-1">Доставка</label>
-        <label for="services-btn-2">Гарантия</label>
-        <label for="services-btn-3">Кредит</label>
-      </div>
+        <div class="services-slider__controls">
+          <label for="services-btn-1" class="btn">Доставка</label>
+          <label for="services-btn-2" class="btn">Гарантия</label>
+          <label for="services-btn-3" class="btn">Кредит</label>
+        </div>
 
-    </section>
+      </section>
+    </div>
 
     <section class="companies">
       <ul class="companies__list">
@@ -244,7 +246,9 @@
       <section class="contacts">
         <h2 class="contacts__title">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <div class="map"></div>
+        <div class="map">
+          <img src="img/map.jpg" alt="Карта" width="560" height="222">
+        </div>
         <a href="#" class="btn">Напишите нам</a>
       </section>
     </div>
@@ -252,64 +256,66 @@
   </main>
 
   <footer class="main-footer">
-    <div class="column-left">
+    <div class="main-footer__wrapper">
+      <div class="column-left">
 
-      <div class="footer-logo">
-        <img src="img/logo-footer.png" alt="Логотип Нёрдса">
+        <div class="footer-logo">
+          <img src="img/logo-footer.png" alt="Логотип Нёрдса">
+        </div>
+
+        <p class="adress">г.Москва, ул. Строителей, 15</p>
+
       </div>
 
-      <p class="adress">г.Москва, ул. Строителей, 15</p>
+      <div class="column-center">
 
-    </div>
-
-    <div class="column-center">
-
-    <ul class="main-footer__nav-list">
-      <li class="main-footer__nav-items">
-        <a href="#">Доставка</a>
-      </li>
-      <li class="main-footer__nav-items">
-        <a href="#">Гарантия</a>
-      </li>
-      <li class="main-footer__nav-items">
-        <a href="#">Контакты</a>
-      </li>
-    </ul>
-
-    <ul class="social-btn">
-      <li class="social-icon">
-        <a href="#">Facebook</a>
-      </li>
-      <li class="social-icon">
-        <a href="#">Instagram</a>
-      </li>
-      <li class="social-icon">
-        <a href="#">Twitter</a>
-      </li>
-    </ul>
-
-    </div>
-
-    <div class="columt-right">
-
-      <ul class="main-footer__user-list">
-        <li class="main-footer__user-item">
-          <a href="#">Войти</a>
+      <ul class="main-footer__nav-list">
+        <li class="main-footer__nav-item">
+          <a href="#">Доставка</a>
         </li>
-        <li class="main-footer__user-item">
-          <a href="#">Сравнить</a>
+        <li class="main-footer__nav-item">
+          <a href="#">Гарантия</a>
         </li>
-        <li class="main-footer__user-item">
-          <a href="#">Корзина</a>
+        <li class="main-footer__nav-item">
+          <a href="#">Контакты</a>
         </li>
       </ul>
 
-    </div>
+      <ul class="social-btn">
+        <li class="social-icon social-icon__fb">
+          <a href="#">Facebook</a>
+        </li>
+        <li class="social-icon social-icon__in">
+          <a href="#">Instagram</a>
+        </li>
+        <li class="social-icon social-icon__twit">
+          <a href="#">Twitter</a>
+        </li>
+      </ul>
 
-    <p class="phone">Тел. +7(495) 495-95-95</p>
+      </div>
 
-    <div class="copyright">
-      <img src="img/logo-html.svg" alt="HTML Academy" width="27" height="35">
+      <div class="column-right">
+
+        <ul class="main-footer__user-list">
+          <li class="main-footer__user-item main-footer__user-item--enter">
+            <a href="#">Войти</a>
+          </li>
+          <li class="main-footer__user-item main-footer__user-item--compare">
+            <a href="#">Сравнить</a>
+          </li>
+          <li class="main-footer__user-item main-footer__user-item--cart">
+            <a href="#">Корзина</a>
+          </li>
+        </ul>
+
+        <p class="phone">Тел. +7(495) 495-95-95</p>
+
+        <div class="copyright">
+          <img src="img/logo-html.svg" alt="HTML Academy" width="27" height="35">
+        </div>
+
+      </div>
     </div>
   </footer>
 
