--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Магазин электроники "Нёрдс"</title>
+  <title>Магазин электроники "DEVICE"</title>
   <link rel="stylesheet" href="css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
 </head>
@@ -10,7 +10,7 @@
   <header class="main-header">
 
     <a class="logo">
-      <img src="img/logo.png" alt="Логотип Нёрдса" width="164" height="36">
+      <img src="img/logo.png" alt="Логотип Девайса" width="164" height="36">
     </a>
 
     <div class="user-items">
@@ -47,7 +47,7 @@
       </ul>
 
       <ul class="catalog__list catalog__list--closed">
-        <div class="left-column">
+        <div class="column">
           <li class="catalog__item">
             <a href="#">Виртуальная реальность</a>
           </li>
@@ -58,7 +58,7 @@
             <a href="#">Экшн-камеры</a>
           </li>
         </div>
-        <div class="center-column">
+        <div class="column">
           <li class="catalog__item">
             <a href="#">Фитнес-браслеты</a>
           </li>
@@ -66,7 +66,7 @@
             <a href="#">Умные часы</a>
           </li>
         </div>
-        <div class="right-column">
+        <div class="column">
           <li class="catalog__item">
             <a href="#">Квадрокоптеры</a>
           </li>
@@ -246,10 +246,10 @@
       <section class="contacts">
         <h2 class="contacts__title">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.</p>
-        <div class="map">
+        <button class="map">
           <img src="img/map.jpg" alt="Карта" width="560" height="222">
-        </div>
-        <a href="#" class="btn">Напишите нам</a>
+        </button>
+        <a href="#" class="btn write-us-btn">Напишите нам</a>
       </section>
     </div>
 
@@ -318,6 +318,34 @@
       </div>
     </div>
   </footer>
+
+  <section class="write-us-popup write-us-popup--closed">
+    <form>
+      <div class="write-us-popup__layout">
+        <div class="column-left">
+          <label for="name-field">Ваше имя:</label>
+          <input type="text" placeholder="Имя Фамилия" name="name" id="name-field">
+        </div>
+        <div class="column-right">
+          <label for="email-field">Ваш e-mail:</label>
+          <input type="email" name="email" id="email-field" placeholder="email@example.com">
+        </div>
+      </div>
+      <label for="letter-field">Текст письма</label>
+      <textarea id="letter-field" name="letter" placeholder="В свободной форме" rows="7"></textarea>
+      <button type="submit" class="btn">Отправить</button>
+      <button class="modal-close">Закрыть</button>
+    </form>
+  </section>
+
+  <section class="map-popup map-popup--closed">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533238!2d30.320858716359357!3d59.938716481876206!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sua!4v1536856068990" width="960" height="560" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <p class="no-js"><img src="img/map-big.jpg" alt="Офис компании по адресу ул. Большая Конюшенная, 19/8, Санкт-Петербург" width="960" height="560"></p>
+    <button type="button" class="modal-close">Закрыть</button>
+  </section>
+
+  <script src="js/popup.js"></script>
 
 </body>
 </html>
